# Ensemble-Learning

./: .gitignore  CMakeLists.txt  COPYING  Doxyfile  Doxyfile.in  README.txt  boost-build.jam  dependencies.dot  jamroot.jam
EnsembleLearning-src/: CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Doxyfile.in
EnsembleLearning-src/include/: EnsembleLearning.hpp  ICA.hpp
EnsembleLearning-src/include/EnsembleLearning/: #Builder.hpp#  .#Builder.hpp  Builder.hpp  Input.hpp  Output.hpp
EnsembleLearning-src/include/EnsembleLearning/calculation_tree/: Context.hpp  Expression.hpp  Factory.hpp  Functions.hpp  FunctionsIterator.hpp  Placeholder.hpp
EnsembleLearning-src/include/EnsembleLearning/detail/: AlgorithmChecker.hpp  MACRO_defaults.hpp  MixtureVector.hpp  MixtureVector_create.hpp  MixtureVector_create_priors.hpp  Mutex.hpp  TernaryOp.hpp  TypeList.hpp  parallel_algorithms.hpp
EnsembleLearning-src/include/EnsembleLearning/exception/: NotConjugate.hpp
EnsembleLearning-src/include/EnsembleLearning/exponential_model/: Dirichlet.hpp  Discrete.hpp  Gamma.hpp  Gaussian.hpp  Random.hpp  RectifiedGaussian.hpp
EnsembleLearning-src/include/EnsembleLearning/message/: Coster.hpp  Moments.hpp  MomentsIterator.hpp  NaturalParameters.hpp
EnsembleLearning-src/include/EnsembleLearning/node/: Node.hpp
EnsembleLearning-src/include/EnsembleLearning/node/factor/: Calculation.hpp  Calculation_GetNaturalNot.hpp  Factor.hpp  Mixture.hpp  Mixture_AddChildFactor.hpp  Mixture_GetNaturalNot.hpp  Mixture_InitialiseMoments.hpp
EnsembleLearning-src/include/EnsembleLearning/node/variable/: Calculation.hpp  Hidden.hpp  Observed.hpp
EnsembleLearning-src/include/ICA/: Builder.hpp
EnsembleLearning-src/include/ICA/calculation_tree/: Expression.hpp  Factory.hpp  Functions.hpp
EnsembleLearning-src/include/ICA/exponential_model/: Gamma.hpp  Gaussian.hpp
EnsembleLearning-src/include/ICA/message/: Coster.hpp  MomentsIterator.hpp  NaturalParameters.hpp
EnsembleLearning-src/include/ICA/node/: Node.hpp
EnsembleLearning-src/include/ICA/node/factor/: Calculation.hpp  Mixture.hpp
EnsembleLearning-src/include/ICA/node/variable/: Hidden.hpp  Observed.hpp
EnsembleLearning-src/src/: Builder.cpp  CT.patch  Factory.cpp  Placeholder.cpp  Random.cpp
EnsembleLearning-src/test/: CMakeLists.txt  CTestTestfile.cmake  test.patch  test_EnsembleLearning.cpp  test_ICA.cpp
cmake/: architecture.cmake  lcov.cmake  sse.cmake
example/ICA/include/: #BuildModel.hpp#  BuildModel.hpp  ExampleData.hpp
example/ICA/src/: ICA.cpp
example/InferData1/: CMakeLists.txt
example/InferData1/src/: InferData1.cpp
example/InferMixtureData1/: CMakeLists.txt
example/InferMixtureData1/image/: data_points.eps  plot_data.gp
example/InferMixtureData1/src/: InferMixture1.cpp
example/InferScaledData1/: CMakeLists.txt
example/InferScaledData1/image/: data_points.eps  plot_data.gp  plot_priors.gp  priors.eps
example/InferScaledData1/src/: InferScaledData1.cpp
gsl/: CMakeLists.txt
gsl/err/.deps/: error.Plo  message.Plo  stream.Plo  strerror.Plo
gsl/ieee-utils/: libgslieeeutils.la
gsl/ieee-utils/.deps/: env.Plo  fp.Plo  make_rep.Plo  print.Plo  read.Plo
gsl/randist/: libgslrandist.la
gsl/randist/.deps/: bernoulli.Plo  beta.Plo  bigauss.Plo  binomial.Plo  binomial_tpe.Plo  cauchy.Plo  chisq.Plo  dirichlet.Plo  discrete.Plo  erlang.Plo  exponential.Plo  exppow.Plo  fdist.Plo  flat.Plo  gamma.Plo  gauss.Plo  gausstail.Plo  gausszig.Plo  geometric.Plo  gumbel.Plo  hyperg.Plo  landau.Plo  laplace.Plo  levy.Plo  logarithmic.Plo  logistic.Plo  lognormal.Plo  multinomial.Plo  nbinomial.Plo  pareto.Plo  pascal.Plo  poisson.Plo  rayleigh.Plo  shuffle.Plo  sphere.Plo  tdist.Plo  weibull.Plo
gsl/sys/: CMakeLists.txt  libgslsys.la
gsl/sys/.deps/: expm1.Plo  hypot.Plo  invhyp.Plo  ldfrexp.Plo  prec.Plo
gsl/test/: CMakeList.txt  CMakeLists.txt  libgsltest.la
gsl/test/.deps/: results.Plo
gsl/utils/: libutils.la
include/: ICA.hpp
include/ICA/: Builder.hpp  Coster.hpp  Moments.hpp  NaturalParameters.hpp  Node.hpp  Output.hpp
include/ICA/Deterministic/: Context.hpp  Factory.hpp  Placeholder.hpp  VariableExp.hpp  context.hpp  minus.hpp  plus.hpp  times.hpp  variable_factory.hpp
include/ICA/calculation_tree/: Context.hpp  Expression.hpp  Factory.hpp  Functions.hpp  FunctionsIterator.hpp  Placeholder.hpp  language.hpp
include/ICA/detail/: AlgorithmChecker.hpp  Mutex.hpp  parallel_algorithms.hpp
include/ICA/exception/: NotConjugate.hpp
include/ICA/exponential_model/: .#Gaussian.hpp  Dirichlet.hpp  Discrete.hpp  Gamma.hpp  Gaussian.hpp  Random.hpp  RectifiedGaussian.hpp
include/ICA/exponential_models/: DirichletModel.hpp  DiscreteModel.hpp  ExponentialModel.hpp  GammaModel.hpp  GaussianModel.hpp  RectifiedGaussianModel.hpp
include/ICA/factor/: CalcGaussian.hpp  CalculationFactor.hpp  Calculations.hpp  Deterministic.hpp  DeterministicFactor.hpp  DeterministicFactorBKP.hpp  Factor.hpp  Mixture.hpp  Mixture.hpp.BKP
include/ICA/message/: Coster.hpp  Moments.hpp  MomentsIterator.hpp  NaturalParameters.hpp
include/ICA/node/: Node.hpp
include/ICA/node/factor/: Calculation.hpp  Factor.hpp  Mixture.hpp
include/ICA/node/variable/: Calculation.hpp  Constant.hpp  ConstantModels_rm.hpp  Data_rm.hpp  Dirichlet.hpp  Hidden.hpp  Observed.hpp
include/ICA/variable/: CalculationNode.hpp  ComponentNode.hpp  ConstantModels.hpp  ConstantNode.hpp  DataNode.hpp  DeterministicNode.hpp  DirichletNode.hpp  ForwardingNode.hpp  ForwardingNodeBKP.hpp  HiddenNode.hpp  Mixture.hpp  MixtureNode.hpp  MixtureNode.hpp.bkp
src/: Builder.cpp  ConstantNode.cpp  FactorNode.cpp  GammaFactor.cpp  GaussianFactor.cpp  HiddenNode.cpp  Node.cpp
test/: test_ICA.cpp
